[package]
name = "grass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing-subscriber = "0.3.16"
wgpu = "0.15.1"
winit = "0.28.3"
