[package]
name = "grass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bytemuck = { version = "1.13.1", features = ["derive"] }
image = { version = "0.24.6", features = ["png", "jpeg"] }
log = "0.4.17"
nalgebra-glm = "0.18.0"
rand = "0.8.5"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wgpu = "0.15.1"
winit = "0.28.3"
